tests/compile-errors/ce-null-after-loop.valk

fn main() {
    let x : ?String = "a"
    while true {
        if true {
            x = null
            break
        }
        x = "b"
        break
    }
    println(x)
}
